Fix font size causing scrollbars in small screens

--- a/src/builder/public/css/builder.css
+++ b/src/builder/public/css/builder.css
@@ -169,6 +169,12 @@
 	font-size: 1.5em;
 }
 
+@media (max-width: 400px) {
+	.function .name {
+		font-size: 1.2em;
+	}
+}
+
 .function .info {
 	font-weight: bold;
 	font-size: 0.9em;
